# BetterSteamAutoCracker

./: .gitignore  LICENSE  README.md  TODO.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  declaration.d.ts  theme.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: command.rs  config.rs  dialog.rs  error.rs  lib.rs  main.rs  search.rs  settings.rs  setup.rs
src-tauri/src/goldberg/: achievements.rs  apply.rs  depots.rs  dlcs.rs  interfaces.rs  languages.rs  mod.rs
src-tauri/src/steamless/: apply.rs  config.rs  files.rs  mod.rs  scanner.rs  utils.rs
src/components/: titlebar.tsx  toast.tsx  tutorial.tsx
src/components/interfaces/: credits.tsx  main.tsx
src/lib/: checkForDRM.ts  tauri.ts  utils.ts
